[package]
name = "bravery"
version = "0.1.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"
description = "A fast http async web server"
readme = "README.md"
license = "MIT"
keywords = ["bravery", "fast", "http", "api"]
repository = "https://github.com/allevo/bravery"

[dependencies]
tokio = "0.1.6"
tokio-codec = "0.1.0"
tokio-core = "0.1.17"
tokio-io = "0.1"
futures = "0.1.23"
http = "0.1.7"
bytes = "0.4"
httparse = "1.1.2"
regex = "1"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
