[package]
name = "bravery"
version = "0.1.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"
description = "A fast http async web server"
readme = "README.md"
license = "MIT"
keywords = ["bravery", "fast", "http", "api"]
repository = "https://github.com/allevo/bravery"

[dependencies]
tokio = "0.1.22"
tokio-codec = "0.1.1"
tokio-core = "0.1.17"
tokio-io = "0.1"
futures = "0.1.28"
http = "0.1.18"
bytes = "0.4"
httparse = "1.3.4"
regex = "1.2.1"
serde = "1.0.99"
serde_json = "1.0.40"
serde_derive = "1.0.99"
serde_urlencoded = "0.6.1"
bravery_router = "0.1"
sloggers = "0.3.3"
slog = "2.5.2"

[dev-dependencies]
struct2swagger = { path = "../swagger/struct2swagger" }
struct2swagger_derive = { path = "../swagger/struct2swagger_derive" }

[[example]]
name = "hello_world"
test = true

[[example]]
name = "post_body"
test = true

[[example]]
name = "query_params"
test = true

[[example]]
name = "shared_state"
test = true

[[example]]
name = "logs"
test = true

[[swagger]]
name = "swagger"
test = true
